<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width= "match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true">

    <TextView
        android:id="@+id/TextViewIntroducirCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Introduce un código de partida: "
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true">

    </TextView>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp">

    </Space>

    <EditText
        android:id="@+id/EditTextCodigo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/TextViewIntroducirCodigo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

    </EditText>

    <TextView
        android:id="@+id/TextViewP"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_toLeftOf="@id/EditTextCodigo"
        android:layout_below="@+id/TextViewIntroducirCodigo"
        android:text="P-"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

    </TextView>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp">

    </Space>

    <TextView
        android:id="@+id/TextViewFedBackIntroducirCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/EditTextCodigo"
        android:text=""
        android:layout_centerHorizontal="true">

    </TextView>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp">

    </Space>

    <Button
        android:id="@+id/botonJugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextViewFedBackIntroducirCodigo"
        android:text="JUGAR"
        android:layout_centerHorizontal="true">

    </Button>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp">

    </Space>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAtrasEntrarEnPartida"
        android:layout_below="@id/botonJugar"
        android:text="ATRÁS"
        android:layout_centerHorizontal="true">

    </Button>

</RelativeLayout>