<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context=".InfoVista">

    <TextView
        android:id="@+id/txtViewTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
     <Space
         android:layout_width="0dp"
         android:layout_height="25dp"
         ></Space>
    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CONTINUAR">
    </Button>


</LinearLayout>