<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ComprobarResultadoVista">

    <TextView
        android:id="@+id/tVComprobacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="32dp" ></TextView>
    <Space
        android:layout_width="0dp"
        android:layout_height="20dp"></Space>

    <Button
        android:id="@+id/btnReintentar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REINTENTAR"></Button>
    <Space
        android:layout_width="0dp"
        android:layout_height="10dp"></Space>
    <Button
        android:id="@+id/btnTerminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TERMINAR"></Button>



</LinearLayout>