<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainVista">

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@mipmap/lcqnv_logo_sin_fondo" />

    <Button
        android:id="@+id/btnModoAdmin"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imagen"
        android:layout_marginTop="80dp"
        android:text="MODO ADMIN" />

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnModoAdmin"
        android:layout_marginTop="20dp"
        android:text="JUGAR" />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:text=""
        />



</RelativeLayout>